fix: alignment

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body{
     width: 100%;
     height: 100%;
     max-width: 1300px;
-    padding: 0 20px;
+    padding: 0 10px;
 }
 #header .nav-list ul{
     list-style: none;
@@ -141,7 +141,7 @@ body{
     align-items: center;
     cursor: pointer;
     transform: scale(.7);
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 #header .hamburger:after{
     content: '';
